Added maven environment variables